# mh

./: .gitignore  CMakeLists.txt  build.sh
include/: mh.hpp
lib/: mh.cpp
src/: generator.cpp  main.cpp
